--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="RevGo - Last-mile delivery with EV fleet solutions for e-commerce and logistics companies.">
     <title>RevGo - Sustainable Last-Mile Delivery</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="static/styles.css">
 </head>
 <body>
 
     <!-- Navbar -->
     <nav>
-        <div class="logo"><img src="{{ url_for('static', filename='logo.png') }}" alt="RevGo Logo"></div>
+        <div class="logo"><img src="static/logo.png" alt="RevGo Logo"></div>
         <ul>
             <li><a href="#about">About Us</a></li>
             <li><a href="#offerings">Offerings</a></li>
@@ -67,6 +67,6 @@
         </form>
     </section>
 
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
