--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Navbar -->
     <nav>
-        <div class="logo"><img src="static/logo.png" alt="RevGo Logo"></div>
+        <div class="logo"><img src="static/Revgo.jpeg" alt="RevGo Logo"></div>
         <ul>
             <li><a href="#about">About Us</a></li>
             <li><a href="#offerings">Offerings</a></li>
