--- a/index.html
+++ b/index.html
@@ -27,28 +27,62 @@
         <button onclick="scrollToContact()">Contact Us</button>
     </header>
 
-    <!-- About Us -->
-    <section id="about">
-        <h2>About Us</h2>
-        <p>We are logistics pioneers with expertise in supply chain optimization, warehousing, and EV-based delivery.</p>
-    </section>
+    <!-- About Us Section -->
+<section id="about">
+    <h2>Fast and Reliable Last-Mile Delivery & Logistics Solutions</h2>
+    <p>At RevGo, we specialize in seamless last-mile logistics, helping businesses optimize supply chains with electric vehicle (EV) delivery solutions. Our team of industry veterans brings 20-25 years of expertise in transportation, logistics, and warehousing.</p>
 
-    <!-- Offerings -->
-    <section id="offerings">
-        <h2>Our Offerings</h2>
-        <div>
-            <h3>Charging Infrastructure</h3>
-            <p>We provide dedicated EV charging stations to keep deliveries running efficiently.</p>
+    <div class="about-container">
+        <div class="about-item">
+            <img src="static/images/logistics-pioneer.png" alt="Logistics Pioneers">
+            <h3>Industry-Leading Logistics Experts</h3>
+            <p>Our specialists have spent decades mastering supply chain management, ensuring efficient and timely deliveries that drive business growth.</p>
         </div>
-        <div>
-            <h3>Smart Mobility</h3>
-            <p>Optimized delivery routes for sustainable and efficient logistics.</p>
+        
+        <div class="about-item">
+            <img src="static/images/handling-giants.png" alt="Handling Giants">
+            <h3>Trusted by E-Commerce Leaders</h3>
+            <p>We’ve partnered with Flipkart, BigBasket, and Amazon, handling large-scale operations with precision and efficiency.</p>
         </div>
-        <div>
-            <h3>Warehouse Solutions</h3>
-            <p>On-demand storage and dispatch services tailored for businesses.</p>
+
+        <div class="about-item">
+            <img src="static/images/strategic-insights.png" alt="Strategic Insights">
+            <h3>Data-Driven Logistics Strategy</h3>
+            <p>We utilize advanced analytics for inventory control, route optimization, and warehouse management, ensuring streamlined operations.</p>
         </div>
-    </section>
+
+        <div class="about-item">
+            <img src="static/images/client-centric.png" alt="Client-Centric Approach">
+            <h3>Custom Logistics Solutions</h3>
+            <p>We tailor our services to meet business-specific requirements, providing flexible, client-focused logistics and delivery solutions.</p>
+        </div>
+    </div>
+</section>
+
+<!-- Our Offerings Section -->
+<section id="offerings">
+    <h2>Comprehensive EV Logistics Solutions</h2>
+    
+    <div class="offerings-container">
+        <div class="offerings-item">
+            <img src="static/images/charging-infra.png" alt="EV Charging Infrastructure">
+            <h3>Advanced EV Charging Stations</h3>
+            <p>We provide a robust EV charging infrastructure to ensure uninterrupted delivery operations, reducing downtime and maximizing efficiency.</p>
+        </div>
+
+        <div class="offerings-item">
+            <img src="static/images/smart-mobility.png" alt="Smart Mobility">
+            <h3>AI-Powered Route Optimization</h3>
+            <p>Our smart mobility solutions use AI-driven route planning to enhance delivery speed while minimizing environmental impact.</p>
+        </div>
+
+        <div class="offerings-item">
+            <img src="static/images/warehouse-solutions.png" alt="Warehouse Solutions">
+            <h3>Scalable Warehouse & Inventory Solutions</h3>
+            <p>We offer flexible storage and on-demand dispatch services to streamline inventory management for e-commerce businesses.</p>
+        </div>
+    </div>
+</section>
 
     <!-- Contact Form -->
     <section id="contact">
