--- a/index.html
+++ b/index.html
@@ -28,31 +28,32 @@
     </header>
 
     <!-- About Us Section -->
+<!-- About Us Section -->
 <section id="about">
     <h2>Fast and Reliable Last-Mile Delivery & Logistics Solutions</h2>
     <p>At RevGo, we specialize in seamless last-mile logistics, helping businesses optimize supply chains with electric vehicle (EV) delivery solutions. Our team of industry veterans brings 20-25 years of expertise in transportation, logistics, and warehousing.</p>
 
     <div class="about-container">
         <div class="about-item">
-            <img src="static/images/logistics-pioneer.png" alt="Logistics Pioneers">
+            <i class="fas fa-truck-moving"></i>
             <h3>Industry-Leading Logistics Experts</h3>
             <p>Our specialists have spent decades mastering supply chain management, ensuring efficient and timely deliveries that drive business growth.</p>
         </div>
         
         <div class="about-item">
-            <img src="static/images/handling-giants.png" alt="Handling Giants">
+            <i class="fas fa-building"></i>
             <h3>Trusted by E-Commerce Leaders</h3>
             <p>We’ve partnered with Flipkart, BigBasket, and Amazon, handling large-scale operations with precision and efficiency.</p>
         </div>
 
         <div class="about-item">
-            <img src="static/images/strategic-insights.png" alt="Strategic Insights">
+            <i class="fas fa-chart-line"></i>
             <h3>Data-Driven Logistics Strategy</h3>
             <p>We utilize advanced analytics for inventory control, route optimization, and warehouse management, ensuring streamlined operations.</p>
         </div>
 
         <div class="about-item">
-            <img src="static/images/client-centric.png" alt="Client-Centric Approach">
+            <i class="fas fa-user-check"></i>
             <h3>Custom Logistics Solutions</h3>
             <p>We tailor our services to meet business-specific requirements, providing flexible, client-focused logistics and delivery solutions.</p>
         </div>
@@ -83,7 +84,6 @@
         </div>
     </div>
 </section>
-
     <!-- Contact Form -->
     <section id="contact">
         <h2>Get in Touch</h2>
