--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     </header>
 
     <!-- About Us Section -->
-<!-- About Us Section -->
 <section id="about">
     <h2>Fast and Reliable Last-Mile Delivery & Logistics Solutions</h2>
     <p>At RevGo, we specialize in seamless last-mile logistics, helping businesses optimize supply chains with electric vehicle (EV) delivery solutions. Our team of industry veterans brings 20-25 years of expertise in transportation, logistics, and warehousing.</p>
@@ -66,24 +65,25 @@
     
     <div class="offerings-container">
         <div class="offerings-item">
-            <img src="static/images/charging-infra.png" alt="EV Charging Infrastructure">
+            <img src="static/Charging.jpg" alt="EV Charging Infrastructure">
             <h3>Advanced EV Charging Stations</h3>
             <p>We provide a robust EV charging infrastructure to ensure uninterrupted delivery operations, reducing downtime and maximizing efficiency.</p>
         </div>
 
         <div class="offerings-item">
-            <img src="static/images/smart-mobility.png" alt="Smart Mobility">
+            <img src="static/Mobility.png" alt="Smart Mobility">
             <h3>AI-Powered Route Optimization</h3>
             <p>Our smart mobility solutions use AI-driven route planning to enhance delivery speed while minimizing environmental impact.</p>
         </div>
 
         <div class="offerings-item">
-            <img src="static/images/warehouse-solutions.png" alt="Warehouse Solutions">
+            <img src="static/warehouse.png" alt="Warehouse Solutions">
             <h3>Scalable Warehouse & Inventory Solutions</h3>
             <p>We offer flexible storage and on-demand dispatch services to streamline inventory management for e-commerce businesses.</p>
         </div>
     </div>
 </section>
+
     <!-- Contact Form -->
     <section id="contact">
         <h2>Get in Touch</h2>
