--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button onclick="scrollToContact()">Contact Us</button>
     </header>
 
-    <!-- About Us Section -->
+<!-- About Us Section -->
 <section id="about">
     <h2>Fast and Reliable Last-Mile Delivery & Logistics Solutions</h2>
     <p>At RevGo, we specialize in seamless last-mile logistics, helping businesses optimize supply chains with electric vehicle (EV) delivery solutions. Our team of industry veterans brings 20-25 years of expertise in transportation, logistics, and warehousing.</p>
@@ -35,26 +35,34 @@
     <div class="about-container">
         <div class="about-item">
             <i class="fas fa-truck-moving"></i>
-            <h3>Industry-Leading Logistics Experts</h3>
-            <p>Our specialists have spent decades mastering supply chain management, ensuring efficient and timely deliveries that drive business growth.</p>
+            <div class="about-content">
+                <h3>Industry-Leading Logistics Experts</h3>
+                <p>Our specialists have spent decades mastering supply chain management, ensuring efficient and timely deliveries that drive business growth.</p>
+            </div>
         </div>
         
         <div class="about-item">
             <i class="fas fa-building"></i>
-            <h3>Trusted by E-Commerce Leaders</h3>
-            <p>We’ve partnered with Flipkart, BigBasket, and Amazon, handling large-scale operations with precision and efficiency.</p>
+            <div class="about-content">
+                <h3>Trusted by E-Commerce Leaders</h3>
+                <p>We’ve partnered with Flipkart, BigBasket, and Amazon, handling large-scale operations with precision and efficiency.</p>
+            </div>
         </div>
 
         <div class="about-item">
             <i class="fas fa-chart-line"></i>
-            <h3>Data-Driven Logistics Strategy</h3>
-            <p>We utilize advanced analytics for inventory control, route optimization, and warehouse management, ensuring streamlined operations.</p>
+            <div class="about-content">
+                <h3>Data-Driven Logistics Strategy</h3>
+                <p>We utilize advanced analytics for inventory control, route optimization, and warehouse management, ensuring streamlined operations.</p>
+            </div>
         </div>
 
         <div class="about-item">
             <i class="fas fa-user-check"></i>
-            <h3>Custom Logistics Solutions</h3>
-            <p>We tailor our services to meet business-specific requirements, providing flexible, client-focused logistics and delivery solutions.</p>
+            <div class="about-content">
+                <h3>Custom Logistics Solutions</h3>
+                <p>We tailor our services to meet business-specific requirements, providing flexible, client-focused logistics and delivery solutions.</p>
+            </div>
         </div>
     </div>
 </section>
@@ -66,24 +74,30 @@
     <div class="offerings-container">
         <div class="offerings-item">
             <img src="static/Charging.jpg" alt="EV Charging Infrastructure">
-            <h3>Advanced EV Charging Stations</h3>
-            <p>We provide a robust EV charging infrastructure to ensure uninterrupted delivery operations, reducing downtime and maximizing efficiency.</p>
+            <div class="offerings-content">
+                <h3>Advanced EV Charging Stations</h3>
+                <p>We provide a robust EV charging infrastructure to ensure uninterrupted delivery operations, reducing downtime and maximizing efficiency.</p>
+            </div>
         </div>
 
         <div class="offerings-item">
             <img src="static/Mobility.png" alt="Smart Mobility">
-            <h3>AI-Powered Route Optimization</h3>
-            <p>Our smart mobility solutions use AI-driven route planning to enhance delivery speed while minimizing environmental impact.</p>
+            <div class="offerings-content">
+                <h3>AI-Powered Route Optimization</h3>
+                <p>Our smart mobility solutions use AI-driven route planning to enhance delivery speed while minimizing environmental impact.</p>
+            </div>
         </div>
 
         <div class="offerings-item">
             <img src="static/warehouse.png" alt="Warehouse Solutions">
-            <h3>Scalable Warehouse & Inventory Solutions</h3>
-            <p>We offer flexible storage and on-demand dispatch services to streamline inventory management for e-commerce businesses.</p>
+            <div class="offerings-content">
+                <h3>Scalable Warehouse & Inventory Solutions</h3>
+                <p>We offer flexible storage and on-demand dispatch services to streamline inventory management for e-commerce businesses.</p>
+            </div>
         </div>
     </div>
 </section>
-
+    
     <!-- Contact Form -->
     <section id="contact">
         <h2>Get in Touch</h2>
