--- a/index.html
+++ b/index.html
@@ -56,14 +56,6 @@
                 <p>We utilize advanced analytics for inventory control, route optimization, and warehouse management, ensuring streamlined operations.</p>
             </div>
         </div>
-
-        <div class="about-item">
-            <i class="fas fa-user-check"></i>
-            <div class="about-content">
-                <h3>Custom Logistics Solutions</h3>
-                <p>We tailor our services to meet business-specific requirements, providing flexible, client-focused logistics and delivery solutions.</p>
-            </div>
-        </div>
     </div>
 </section>
 
@@ -72,32 +64,25 @@
     <h2>Comprehensive EV Logistics Solutions</h2>
     
     <div class="offerings-container">
-        <div class="offerings-item">
-            <img src="static/Charging.jpg" alt="EV Charging Infrastructure">
-            <div class="offerings-content">
-                <h3>Advanced EV Charging Stations</h3>
-                <p>We provide a robust EV charging infrastructure to ensure uninterrupted delivery operations, reducing downtime and maximizing efficiency.</p>
-            </div>
+        <div class="offerings-card">
+            <img src="static/Charging.jpeg" alt="EV Charging Infrastructure">
+            <h3>Advanced EV Charging Stations</h3>
+            <p>We provide a robust EV charging infrastructure to ensure uninterrupted delivery operations, reducing downtime and maximizing efficiency.</p>
         </div>
 
-        <div class="offerings-item">
+        <div class="offerings-card">
             <img src="static/Mobility.png" alt="Smart Mobility">
-            <div class="offerings-content">
-                <h3>AI-Powered Route Optimization</h3>
-                <p>Our smart mobility solutions use AI-driven route planning to enhance delivery speed while minimizing environmental impact.</p>
-            </div>
+            <h3>AI-Powered Route Optimization</h3>
+            <p>Our smart mobility solutions use AI-driven route planning to enhance delivery speed while minimizing environmental impact.</p>
         </div>
 
-        <div class="offerings-item">
+        <div class="offerings-card">
             <img src="static/warehouse.png" alt="Warehouse Solutions">
-            <div class="offerings-content">
-                <h3>Scalable Warehouse & Inventory Solutions</h3>
-                <p>We offer flexible storage and on-demand dispatch services to streamline inventory management for e-commerce businesses.</p>
-            </div>
+            <h3>Scalable Warehouse & Inventory Solutions</h3>
+            <p>We offer flexible storage and on-demand dispatch services to streamline inventory management for e-commerce businesses.</p>
         </div>
     </div>
-</section>
-    
+</section>    
     <!-- Contact Form -->
     <section id="contact">
         <h2>Get in Touch</h2>
