--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     
     <div class="offerings-container">
         <div class="offerings-card">
-            <img src="static/Charging.jpeg" alt="EV Charging Infrastructure">
+            <img src="static/Charging.jpg" alt="EV Charging Infrastructure">
             <h3>Advanced EV Charging Stations</h3>
             <p>We provide a robust EV charging infrastructure to ensure uninterrupted delivery operations, reducing downtime and maximizing efficiency.</p>
         </div>
