--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="RevGo - Sustainable Last-Mile Delivery with EV Fleet">
-    <title>RevGo - Last-Mile EV Logistics</title>
+    <meta name="description" content="RevGo - Last-Mile EV Logistics">
+    <title>RevGo - Sustainable Logistics</title>
     
-    <!-- Favicon -->
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <!-- Import Global CSS -->
+    <link rel="stylesheet" href="/src/styles.css">
 
-    <!-- External Styles -->
-    <link rel="stylesheet" href="styles/global.css">
-
-    <!-- Import FontAwesome for Icons -->
+    <!-- FontAwesome Icons -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js" defer></script>
 </head>
 <body>
